# moveit_config

moveit_command/: CMakeLists.txt  package.xml
moveit_command/src/: Command_Execute.cpp  moveit_execute.cpp  moveit_path.cpp
my_r12_description/urdf/: r12.urdf
r12_config/: CMakeLists.txt  package.xml
r12_config/config/: r12.urdf  r121.urdf
r12_config/launch/: demo.launch.py
r12_move_config/: .setup_assistant  CMakeLists.txt  package.xml
r12_move_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  r12.srdf  r12.urdf.xacro  r121.srdf  ros2_controllers.yaml
r12_move_config/launch/: aps.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
r12_move_config/log/: latest_list
r12_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
r12_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  r12.srdf  ros2_controllers.yaml
r12_moveit_config/launch/: demo.launch  moveit.rviz  r12_moveit_controller_manager.launch.xml
