<?xml version="1.0"?>
<package format="2">
  <name>moveit_command</name>
  <version>0.0.0</version>
  <description>The moveit_command package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="howhowyeh@todo.todo">howhowyeh</maintainer>

  <license>TODO</license>

  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>adlink_msg</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>adlink_msg</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>adlink_msg</exec_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
